src/gui/src/stylesheets/variables.css
:root {
    /* Color Palette */
    --color-white: #fdfdfd;

    --color-slate-50: #f8fafc;
    --color-slate-100: #f1f5f9;
    --color-slate-200: #e2e8f0;
    --color-slate-300: #cbd5e1;
    --color-slate-400: #94a3b8;
    --color-slate-500: #64748b;
    --color-slate-600: #475569;
    --color-slate-700: #334155;
    --color-slate-800: #1e293b;
    --color-slate-900: #0f172a;

    --color-dark: #020617;

    --drop-shadow: var(--color-slate-400) 4px 6px 6px;

    --color-red-light: #ed6f75;
    --color-red-deep: #E7000B;

    --color-blue-light: #DBEAFE;
    --color-blue-deep: #116EFE;
    --color-blue-dark: #294da9;

    --color-yellow-light: #FEF9C2;
    --color-yellow-deep: #ecef25f5;
    --color-yellow-dark: #894B00;

    --color-green-light: #D1FAE5;
    --color-green-deep: #10b981;
    --color-green-dark: #016630;

    /* Sidebar Linear Gradient*/
    --sidebar-gradient: linear-gradient(180deg, var(--color-slate-900) 0%, var(--color-blue-dark) 100%);

    /* TopBar Linear Gradient */
    --topbar-gradient: linear-gradient(90deg, var(--color-slate-900) 0%, var(--color-blue-dark) 100%);

    /* Fonts */
    --font-sans: "Segoe UI", "Segoe UI Fallback", sans-serif;
}

